bootstrap/cluster-resources/in-cluster/codefreshtest-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    argocd.argoproj.io/sync-options: Prune=false
  creationTimestamp: null
  name: codefreshtest
spec: {}
status: {}
